fix msg on mobile & desc

--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
 
 @media only screen and (max-width: 600px) {
   html, body {
-    font-size: 8px;
+    font-size: 12px;
   }
 }
 
